fixed some alignment issues in timermenu

--- a/src/App.css
+++ b/src/App.css
@@ -225,4 +225,8 @@ html:fullscreen {
   #bt {
     width: 62vw;
   }
+
+  #header1 {
+    width: 52%;
+  }
 }
